--- a/src/styleguide/atoms/dropdown.scss
+++ b/src/styleguide/atoms/dropdown.scss
@@ -2,8 +2,14 @@
   height: 35px;
   max-height: 35px;
   min-height: 35px;
+  min-width: 190px;
+  width: 190px;
   .p-dropdown-label {
     font-size: 14px;
     height: 34px;
   }
+}
+p-dropdown {
+  min-width: 190px;
+  width: 190px;
 }
