--- a/src/app/shared/components/cma-dropdown-search/cma-dropdown-search.component.html
+++ b/src/app/shared/components/cma-dropdown-search/cma-dropdown-search.component.html
@@ -1,10 +1,13 @@
-<p-dropdown appendTo="body" [options]="options" [(ngModel)]="selectedItem" optionLabel="label" [filter]="true" filterBy="label" [showClear]="true" [placeholder]="placeholder">
-  <ng-template pTemplate="selectedItem">
-    <div *ngIf="selectedItem">
-      <div>{{selectedItem?.label}}</div>
-    </div>
-  </ng-template>
-  <ng-template let-option pTemplate="item">
+<div [formGroup]="form" fxLayout="column" fxLayoutAlign="start start">
+  <label>{{ label }}</label>
+  <p-dropdown appendTo="body" [options]="options" [formControlName]="controlName" optionLabel="label" [filter]="true" filterBy="label" [showClear]="true" [placeholder]="placeholder">
+    <ng-template pTemplate="selectedItem">
+      <div *ngIf="selectedItem">
+        <div>{{selectedItem?.label}}</div>
+      </div>
+    </ng-template>
+    <ng-template let-option pTemplate="item">
       <div>{{option?.label}}</div>
-  </ng-template>
-</p-dropdown>
+    </ng-template>
+  </p-dropdown>
+</div>
