--- a/src/styleguide/atoms/input.scss
+++ b/src/styleguide/atoms/input.scss
@@ -10,3 +10,7 @@
 .p-float-label input:focus ~ label, .p-float-label input.p-filled ~ label, .p-float-label textarea:focus ~ label, .p-float-label textarea.p-filled ~ label, .p-float-label .p-inputwrapper-focus ~ label, .p-float-label .p-inputwrapper-filled ~ label {
   top: -.65rem !important;
 }
+cma-input {
+  min-width: 190px;
+  width: 190px;
+}
