add occupant via state

--- a/src/app/modules/dialog/components/occupants-add-dialog/occupants-add-dialog.component.html
+++ b/src/app/modules/dialog/components/occupants-add-dialog/occupants-add-dialog.component.html
@@ -7,7 +7,7 @@
     <div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
       <cma-input [form]="form" controlName="name" fxFlex label="Name" placeholder="Occupant Name"></cma-input>
 
-      <cma-dropdown [form]="form" fxFlex controlName="relationship" label="Relationship" [options]="relationOptions" placeholder="Occupant Relationship"></cma-dropdown>
+      <cma-dropdown [form]="form" fxFlex controlName="relationship" label="Relationship" [options]="relationOptions" placeholder="Relationship"></cma-dropdown>
     </div>
   </div>
 
