add occupant ui refinements

--- a/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
@@ -28,6 +28,7 @@
 }
 .btn-add-container {
   width: 100%;
+  margin-bottom: 20px !important;
 }
 .action-btns {
   border-top: thin $color-gray-2 solid;
