--- a/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.html
@@ -4,16 +4,16 @@
   <div [formGroup]="form" class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
     <div class="content-occupant" fxLayout="column" fxLayoutAlign="center center">
       <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
-        <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px">
+        <div fxLayout="column" fxLayoutAlign="start center">
           <div class="btn-add-container" fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="20px">
-            <button pButton pRipple type="button" (click)="onAdd()" label="Add" class="p-button-rounded primary"></button>
+            <button pButton pRipple type="button" (click)="onAdd()" label="Add Occupant" class="p-button-rounded primary"></button>
           </div>
 
           <div *ngFor="let occupant of form.get('occupants')?.controls;let i = index" fxLayout="column">
             <ng-container formArrayName="occupants">
               <div fxFlex fxLayoutGap="20px" [formGroupName]="i" fxLayout="row" fxLayoutAlign="start center">
-                <cma-input [form]="occupant" controlName="name" label="Occupant Name"></cma-input>
-                <cma-dropdown [form]="occupant" label="Relationship" [options]="relationOptions" controlName="relationship" placeholder="Relationship"></cma-dropdown>
+                <cma-input [form]="occupant" controlName="name" label="Name"></cma-input>
+                <cma-input [form]="occupant" controlName="relationship" label="Relationship"></cma-input>
                 <button styleClass="p-button-sm" tooltipPosition="top" pTooltip="Remove" pButton pRipple class="btn-remove danger" icon="pi pi-times"></button>
               </div>
             </ng-container>
