--- a/src/app/shared/components/cma-select-option/cma-select-option.component.html
+++ b/src/app/shared/components/cma-select-option/cma-select-option.component.html
@@ -1,3 +1,3 @@
 <div [formGroup]="form">
-  <p-selectButton [formControlName]="controlName" appendTo="body" [options]="options" optionLabel="label" optionValue="value"></p-selectButton>
+  <p-selectButton [formControlName]="controlName" appendTo="body" [options]="options" optionLabel="label"></p-selectButton>
 </div>
