--- a/src/styleguide/atoms/dropdown.scss
+++ b/src/styleguide/atoms/dropdown.scss
@@ -7,6 +7,9 @@
   .p-dropdown-label {
     font-size: 14px;
     height: 34px;
+    &.p-placeholder {
+      color: $color-gray-2;
+    }
   }
 }
 p-dropdown {
