--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -10,6 +10,7 @@
 @import './atoms/input';
 @import './atoms/datepicker';
 @import './atoms/label';
+@import './atoms/placeholder';
 
 @import './molecules/dialog';
 @import './molecules/panel';
