--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
@@ -12,36 +12,33 @@
     </div>
   </div>
 
-  <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
-    <div class="content-personal" fxLayout="column" fxLayoutAlign="center center">
-      <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="25px">
-        <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
-          <cma-input [form]="form" controlName="lastname" label="Lastname"></cma-input>
-          <cma-input [form]="form" controlName="firstname" label="Firstname"></cma-input>
-          <cma-input [form]="form" controlName="middlename" label="Middlename"></cma-input>
-          
-          <cma-input [form]="form" controlName="citizenship" label="Citizenship"></cma-input>
-          <cma-dropdown [form]="form" controlName="gender" [options]="genderOptions" label="Gender" placeholder="Gender"></cma-dropdown>
-          <cma-dropdown [form]="form" controlName="civilStatus" [options]="civilOptions" label="Civil Status" placeholder="Civil Status"></cma-dropdown>
+  <div class="content-personal" fxLayout="column" fxLayoutAlign="center center">
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <cma-input [form]="form" controlName="lastname" label="Lastname"></cma-input>
+      <cma-input [form]="form" controlName="firstname" label="Firstname"></cma-input>
+      <cma-input [form]="form" controlName="middlename" label="Middlename"></cma-input>
 
-          <cma-datepicker [form]="form" controlName="dateOfBirth" label="Date of Birth" placeholder="Date of Birth"></cma-datepicker>
-          <cma-input [form]="form" controlName="occupation" label="Occupation"></cma-input>
-          <cma-input [form]="form" controlName="tin" label="TIN"></cma-input>
+      <cma-input [form]="form" controlName="citizenship" label="Citizenship"></cma-input>
+      <cma-dropdown [form]="form" controlName="gender" [options]="genderOptions" label="Gender" placeholder="Gender"></cma-dropdown>
+      <cma-dropdown [form]="form" controlName="civilStatus" [options]="civilOptions" label="Civil Status" placeholder="Civil Status"></cma-dropdown>
 
-          <cma-input [form]="form" controlName="busAddress" label="Bus. Address"></cma-input>
-          <cma-input [form]="form" controlName="busContactNo" label="Bus. Contact No."></cma-input>
-          <cma-input [form]="form" controlName="busEmail" label="Bus. Email"></cma-input>
+      <cma-datepicker [form]="form" controlName="dateOfBirth" label="Date of Birth" placeholder="Date of Birth"></cma-datepicker>
+      <cma-input [form]="form" controlName="occupation" label="Occupation"></cma-input>
+      <cma-input [form]="form" controlName="tin" label="TIN"></cma-input>
 
-          <cma-dropdown [form]="form" controlName="idType" label="ID Type" [options]="IdTypeOptions" placeholder="ID Type"></cma-dropdown>
-          <cma-input [form]="form" controlName="idNo"  label="ID No."></cma-input>
-          <cma-upload [preview]="getPersonalUploadedFilePreview" (fileEmitter)="onPersonalImageChange($event)" [fileName]="getImagePreview('personalUploadedIdFile')"></cma-upload>
-        </div>
-      </div>
+      <cma-input [form]="form" controlName="busAddress" label="Bus. Address"></cma-input>
+      <cma-input [form]="form" controlName="busContactNo" label="Bus. Contact No."></cma-input>
+      <cma-input [form]="form" controlName="busEmail" label="Bus. Email"></cma-input>
+
+      <cma-dropdown [form]="form" controlName="idType" label="ID Type" [options]="IdTypeOptions" placeholder="ID Type"></cma-dropdown>
+      <cma-input [form]="form" controlName="idNo" label="ID No."></cma-input>
+      <cma-upload [preview]="getPersonalUploadedFilePreview" (fileEmitter)="onPersonalImageChange($event)" [fileName]="getImagePreview('uploadedIdFile')"></cma-upload>
     </div>
   </div>
 
+
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
     <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-    <button pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
+    <button [disabled]="!form.valid" pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
