--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -11,6 +11,7 @@
 @import './atoms/datepicker';
 @import './atoms/label';
 @import './atoms/placeholder';
+@import './atoms/calendar';
 
 @import './molecules/dialog';
 @import './molecules/panel';
