--- a/src/styleguide/atoms/input.scss
+++ b/src/styleguide/atoms/input.scss
@@ -1,4 +1,5 @@
 .p-inputtext {
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   height: 35px;
   font-size: 14px;
@@ -11,8 +12,8 @@
   top: -.65rem !important;
 }
 cma-input {
-  min-width: 190px;
-  width: 190px;
+  min-width: 193px;
+  width: 193px;
 }
 input {
   font-size: 14 !important;
