--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -19,25 +19,25 @@
       <h5>Personal Information</h5>
       <div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="25px">
         <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="15px">
-          <cma-input [readOnly]="true" label="Lastname" [value]="'Fuertes'"></cma-input>
-          <cma-input [readOnly]="true" label="Firstname" [value]="'Rey'"></cma-input>
-          <cma-input [readOnly]="true" label="Middlename" [value]="'Senador'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Lastname" [value]="'Fuertes'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Firstname" [value]="'Rey'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Middlename" [value]="'Senador'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Citizenship" [value]="'Filipino'"></cma-input>
-          <cma-input [readOnly]="true" label="Gender" [value]="'Male'"></cma-input>
-          <cma-input [readOnly]="true" label="Civil Status" [value]="'Married'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Citizenship" [value]="'Filipino'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Gender" [value]="'Male'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Civil Status" [value]="'Married'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Date of Birth" [value]="'06-10-1985'"></cma-input>
-          <cma-input [readOnly]="true" label="Occupation" [value]="'IT Professional'"></cma-input>
-          <cma-input [readOnly]="true" label="TIN" [value]="'123454365'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Date of Birth" [value]="'06-10-1985'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Occupation" [value]="'IT Professional'"></cma-input>
+          <cma-input [isReadOnly]="true" label="TIN" [value]="'123454365'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Occupation" [value]="'none'"></cma-input>
-          <cma-input [readOnly]="true" label="Bus. Address" [value]="'none'"></cma-input>
-          <cma-input [readOnly]="true" label="Bus. Contact No." [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Occupation" [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Bus. Address" [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Bus. Contact No." [value]="'none'"></cma-input>
 
-          <cma-input [readOnly]="true" label="ID Type" [value]="'Drivers License'"></cma-input>
-          <cma-input [readOnly]="true" label="ID No." [value]="'423 2342 25345'"></cma-input>
-          <cma-input [readOnly]="true" label="Upload File" [value]="'driverlicensed_1234.png'"></cma-input>
+          <cma-input [isReadOnly]="true" label="ID Type" [value]="'Drivers License'"></cma-input>
+          <cma-input [isReadOnly]="true" label="ID No." [value]="'423 2342 25345'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Upload File" [value]="'driverlicensed_1234.png'"></cma-input>
         </div>
       </div>
     </div>
@@ -47,25 +47,25 @@
       <h5>Partner Information</h5>
       <div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="25px">
         <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="15px">
-          <cma-input [readOnly]="true" label="Lastname" [value]="'Fuertes'"></cma-input>
-          <cma-input [readOnly]="true" label="Firstname" [value]="'Rey'"></cma-input>
-          <cma-input [readOnly]="true" label="Middlename" [value]="'Senador'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Lastname" [value]="'Fuertes'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Firstname" [value]="'Rey'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Middlename" [value]="'Senador'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Citizenship" [value]="'Filipino'"></cma-input>
-          <cma-input [readOnly]="true" label="Gender" [value]="'Male'"></cma-input>
-          <cma-input [readOnly]="true" label="Civil Status" [value]="'Married'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Citizenship" [value]="'Filipino'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Gender" [value]="'Male'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Civil Status" [value]="'Married'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Date of Birth" [value]="'06-10-1985'"></cma-input>
-          <cma-input [readOnly]="true" label="Occupation" [value]="'IT Professional'"></cma-input>
-          <cma-input [readOnly]="true" label="TIN" [value]="'123454365'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Date of Birth" [value]="'06-10-1985'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Occupation" [value]="'IT Professional'"></cma-input>
+          <cma-input [isReadOnly]="true" label="TIN" [value]="'123454365'"></cma-input>
 
-          <cma-input [readOnly]="true" label="Occupation" [value]="'none'"></cma-input>
-          <cma-input [readOnly]="true" label="Bus. Address" [value]="'none'"></cma-input>
-          <cma-input [readOnly]="true" label="Bus. Contact No." [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Occupation" [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Bus. Address" [value]="'none'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Bus. Contact No." [value]="'none'"></cma-input>
 
-          <cma-input [readOnly]="true" label="ID Type" [value]="'Drivers License'"></cma-input>
-          <cma-input [readOnly]="true" label="ID No." [value]="'423 2342 25345'"></cma-input>
-          <cma-input [readOnly]="true" label="Upload File" [value]="'driverlicensed_1234.png'"></cma-input>
+          <cma-input [isReadOnly]="true" label="ID Type" [value]="'Drivers License'"></cma-input>
+          <cma-input [isReadOnly]="true" label="ID No." [value]="'423 2342 25345'"></cma-input>
+          <cma-input [isReadOnly]="true" label="Upload File" [value]="'driverlicensed_1234.png'"></cma-input>
         </div>
       </div>
     </div>
