--- a/src/app/shared/components/cma-input/cma-input.component.html
+++ b/src/app/shared/components/cma-input/cma-input.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" fxLayout="column" fxLayoutAlign="start start" >
-  <label for="un">{{ label }}</label>
-  <input id="un" type="text" [formControlName]="controlName" [placeholder]="placeholder" pInputText autocomplete="off" />
+<div [formGroup]="form" fxLayout="column" fxLayoutAlign="start start">
+  <label>{{ label }}</label>
+  <input type="text" [readonly]="isReadOnly" [formControlName]="controlName" [placeholder]="placeholder" pInputText autocomplete="off" />
 </div>
