--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
@@ -1,13 +1,13 @@
-<div class="upload-container" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px">
+<div [formGroup]="form" class="upload-container" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="20px">
   <h2>Upload Documents</h2>
 
   <div class="content" fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutGap="20px">
-    <cma-upload-thumb *ngFor="let document of uploadDocuments" [label]="document?.file?.name ? document?.file?.name : document?.label" (filterEmitter)="onUpload($event, document)" [hasUpload]="hasFile(document?.file?.name, document?.label)">
+    <cma-upload-thumb *ngFor="let document of uploadDocuments" [label]="document?.file?.name ? document?.file?.name : document?.label" (filterEmitter)="onUpload($event, document)" [form]="form" [controlName]="document?.formName" [hasUpload]="hasFile(document?.file?.name, document?.label)">
     </cma-upload-thumb>
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
     <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-    <button pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
+    <button [disabled]="!form.valid" pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
