--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
@@ -71,10 +71,10 @@
 }
 @media (max-width: 1280px) {
   .upload-container {
-    max-width: 100%;
     margin: 0;
     padding: 20px 20px;
-    max-width: 100%;
+    max-width: 820px;
+    margin: 0 auto;
   }
   .content {
     padding-top: 20px;
