--- a/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
@@ -59,7 +59,8 @@
     max-width: 100%;
     margin: 0;
     padding: 20px 20px;
-    max-width: 100%;
+    max-width: 820px;
+    margin: 0 auto;
   }
   .header-content {
     padding-bottom: 20px;
