--- a/src/app/modules/on-boarding/components/on-boarding-partner-info/on-boarding-partner-info.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-partner-info/on-boarding-partner-info.component.scss
@@ -43,10 +43,10 @@
 }
 @media (max-width: 1280px) {
   .partner-container {
-    max-width: 100%;
     margin: 0;
     padding: 20px 20px;
-    max-width: 100%;
+    max-width: 820px;
+    margin: 0 auto;
   }
   .header-content {
     padding-bottom: 20px;
