--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -77,19 +77,19 @@
     </div>
 
     <!-- documents -->
-    <div class="documents-container">
+    <div *ngIf="hasDocuments" class="documents-container">
       <h4>Documents</h4>
       <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="5px">
-        <div *ngFor="let document of getDocuments" pTooltip="Download" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
+        <div *ngFor="let docName of getDocuments" pTooltip="Download" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
           <i class="pi pi-file-pdf"></i>
-          <span>{{ document?.label }}</span>
+          <span>{{ docName }}</span>
         </div>
       </div>
+    </div>
 
-      <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-        <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-        <button pButton pRipple type="button" routerLink="/on-boarding/for-approval" label="Submit" class="p-button-rounded success"></button>
-      </div>
+    <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
+      <button pButton pRipple type="button" routerLink="/on-boarding/for-approval" label="Submit" class="p-button-rounded success"></button>
     </div>
   </div>
 
