redirect to and font weight

--- a/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
+++ b/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
@@ -70,6 +70,7 @@
     font-size: 0.7rem;
     height: 1.2rem;
     line-height: 1.3rem;
+    font-weight: 400;
   }
   .payments, .requests, .homeowners, .onboarding {
     &:nth-child(3) {
