fix laptop ui issues

--- a/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.scss
+++ b/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.scss
@@ -2,6 +2,13 @@
 
 :host ::ng-deep {
   .p-calendar .p-inputtext {
+    min-width: 147px;
+  }
+  p-calendar, cma-datepicker {
+    min-width: 183px;
+    width: 183px;
+  }
+  .p-calendar .p-inputtext {
     cursor: pointer;
   }
   .pi-calendar {
