--- a/src/styleguide/atoms/datepicker.scss
+++ b/src/styleguide/atoms/datepicker.scss
@@ -3,8 +3,8 @@
   height: 1.5rem !important;
 }
 p-calendar, cma-datepicker {
-  min-width: 193px;
-  width: 193px;
+  min-width: 100%;
+  width: 100%;
 }
 .p-datepicker .p-datepicker-buttonbar {
   padding: 0;
