--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
@@ -17,19 +17,27 @@
       <cma-input [form]="form" controlName="lastname" label="Lastname" placeholder="Lastname"></cma-input>
       <cma-input [form]="form" controlName="firstname" label="Firstname" placeholder="Firstname"></cma-input>
       <cma-input [form]="form" controlName="middlename" label="Middlename" placeholder="Middlename"></cma-input>
+    </div>
 
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-input [form]="form" controlName="citizenship" label="Citizenship" placeholder="Citizenship"></cma-input>
       <cma-dropdown [form]="form" controlName="gender" [options]="genderOptions" label="Gender" placeholder="Gender"></cma-dropdown>
       <cma-dropdown [form]="form" controlName="civilStatus" [options]="civilOptions" label="Civil Status" placeholder="Civil Status"></cma-dropdown>
+    </div>
 
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-datepicker [form]="form" controlName="dateOfBirth" label="Date of Birth" placeholder="Date of Birth"></cma-datepicker>
       <cma-input [form]="form" controlName="occupation" label="Occupation" placeholder="Occupation"></cma-input>
       <cma-input [form]="form" controlName="tin" label="TIN" placeholder="TIN"></cma-input>
+    </div>
 
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-input [form]="form" controlName="busAddress" label="Bus. Address" placeholder="Bus. Address"></cma-input>
       <cma-input [form]="form" controlName="busContactNo" label="Bus. Contact No." placeholder="Bus. Contact No."></cma-input>
       <cma-input [form]="form" controlName="busEmail" label="Bus. Email" placeholder="Bus. Email"></cma-input>
+    </div>
 
+    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-dropdown [form]="form" controlName="idType" label="ID Type" [options]="IdTypeOptions" placeholder="ID Type"></cma-dropdown>
       <cma-input [form]="form" controlName="idNo" label="ID No." placeholder="ID No."></cma-input>
       <cma-upload [preview]="getPersonalUploadedFilePreview" (fileEmitter)="onPersonalImageChange($event)" [fileName]="getImagePreview('uploadedIdFile')"></cma-upload>
