--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
@@ -55,6 +55,8 @@
   }
   cma-input, cma-dropdown, cma-datepicker, cma-upload {
     margin-bottom: 15px;
+    min-width: 210px;
+    max-width: 210px;
   }
   p-dropdown.dropdown .p-dropdown {
     width: 195px;
