--- a/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.html
+++ b/src/app/shared/components/cmd-datepicker/cmd-datepicker.component.html
@@ -1,4 +1,4 @@
 <div [formGroup]="form" fxLayout="column" fxLayoutAlign="start start">
   <label>{{ label }}</label>
-  <p-calendar appendTo="body" [formControlName]="controlName" showButtonBar="true" [readonlyInput]="true" [placeholder]="placeholder" read [showIcon]="true"></p-calendar>
+  <p-calendar dateFormat="dd-mm-yy" appendTo="body" [formControlName]="controlName" showButtonBar="true" [readonlyInput]="true" [placeholder]="placeholder" [showIcon]="true"></p-calendar>
 </div>
